--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> my-easy-ebsite</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>My Fist website</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nostrum, quae tempore repellat modi assumenda cum molestias incidunt eius ad mollitia laborum doloremque qui nam suscipit voluptates? Eveniet, aperiam odit.</p>
+    </div>
 </body>
 </html>
