--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My Fist website</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nostrum, quae tempore repellat modi assumenda cum molestias incidunt eius ad mollitia laborum doloremque qui nam suscipit voluptates? Eveniet, aperiam odit.</p>
     </div>
+    <div>
+        <h3>My Fist website</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nostrum, quae tempore repellat modi assumenda cum molestias incidunt eius ad mollitia laborum doloremque qui nam suscipit voluptates? Eveniet, aperiam odit.</p>
+    </div>
+    <div>
+        <h3>My Fist website</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nostrum, quae tempore repellat modi assumenda cum molestias incidunt eius ad mollitia laborum doloremque qui nam suscipit voluptates? Eveniet, aperiam odit.</p>
+    </div>
 </body>
 </html>
