trying to learn

--- a/index.html
+++ b/index.html
@@ -7,17 +7,28 @@
     <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-    <div>
-        <h3>My Fist website</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nostrum, quae tempore repellat modi assumenda cum molestias incidunt eius ad mollitia laborum doloremque qui nam suscipit voluptates? Eveniet, aperiam odit.</p>
-    </div>
-    <div>
-        <h3>My Fist website</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nostrum, quae tempore repellat modi assumenda cum molestias incidunt eius ad mollitia laborum doloremque qui nam suscipit voluptates? Eveniet, aperiam odit.</p>
-    </div>
-    <div>
-        <h3>My Fist website</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nostrum, quae tempore repellat modi assumenda cum molestias incidunt eius ad mollitia laborum doloremque qui nam suscipit voluptates? Eveniet, aperiam odit.</p>
+    <div id="flex">
+        <div class="hi">
+            <h3>My Fist website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nostrum, quae tempore repellat modi assumenda cum molestias incidunt eius ad mollitia laborum doloremque qui nam suscipit voluptates? Eveniet, aperiam odit.</p>
+        </div>
+        <div class="hi">
+            <h3>My Fist website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nostrum, quae tempore repellat modi assumenda cum molestias incidunt eius ad mollitia laborum doloremque qui nam suscipit voluptates? Eveniet, aperiam odit.</p>
+        </div>
+        <div class="hi">
+            <h3>My Fist website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem nostrum, quae tempore repellat modi assumenda cum molestias incidunt eius ad mollitia laborum doloremque qui nam suscipit voluptates? Eveniet, aperiam odit.</p>
+        </div>
+        <div class="hi">
+            <h3>How to push code</h3>
+            <ul>
+                <li>git add</li>
+                <li>git commit -m"add a meaningfull commit msg"</li>
+                <li>git push</li>
+            </ul>
+        </div>
+        
     </div>
 </body>
 </html>
